kubernetes/legacy/local/storage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: storage.gw2treasures.kubernetes.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: storage
            port:
              name: http
